--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- @TODO: use BC Gov favicon <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <script src="/env.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Dates of Operation</title>
   </head>
   <body>
     <div id="root"></div>
