Copy favicon from legacy frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- @TODO: use BC Gov favicon <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" href="/favicon.png" sizes="32x32" type="image/png" />
     <script src="/env.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dates of Operation</title>
